--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -31,15 +31,15 @@ Before you create any contracts:
 
 </Note>
 
-2. If you're using the `@apollo/gateway` library instead of the Apollo Router:
+2. If you're using the `@apollo/gateway` library instead of GraphOS Router:
 
    - For Federation 2 contract variants, update your gateway's `@apollo/gateway` library to v2.0.2 or later.
    - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to v0.34.0 or later.
 
 <Note>
 
-Apollo recommends the Apollo Router over `@apollo/gateway` because it [significantly improves performance and security](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust/).
-If you have a federated graph currently using `@apollo/gateway`, you can move to the Apollo Router without changing any other part of your graph. See the [migration guide](/router/migrating-from-gateway/).
+Apollo recommends the router over `@apollo/gateway` because it [significantly improves performance and security](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust/).
+If you have a federated graph currently using `@apollo/gateway`, you can move to the router without changing any other part of your graph. See the [migration guide](/router/migrating-from-gateway/).
 
 </Note>
 
