--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -1,7 +1,7 @@
 ---
 title: Router Resource Estimator
-subtitle: Estimate the system resources to allocate for the Apollo Router
-description: Estimate the system resources you need to allocate for the Apollo Router to run production traffic.
+subtitle: Estimate the system resources to allocate for the GraphOS Router
+description: Estimate the system resources you need to allocate for the Apollo GraphOS Router to run production traffic.
 published: 2023-12-15
 id: TN0045
 toc: false
@@ -10,7 +10,7 @@ tags: [router]
 
 import RouterResourceEstimator from '../../components/TechNotes/RouterResourceEstimator';
 
-The _router resource estimator_ estimates the system resources you need to allocate for the Apollo Router to run production traffic. The resource estimator can help you get a starting baseline that you can then iterate on.
+The _router resource estimator_ estimates the system resources you need to allocate for the GraphOS Router to run production traffic. The resource estimator can help you get a starting baseline that you can then iterate on.
 
 ## Usage
 
