--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -47,7 +47,7 @@ Description
 
 A supergraph consisting of:
 
-- A GraphOS-hosted router
+- A GraphOS Router
 - One or more subgraphs hosted in your infrastructure
 
 Recommended for all organizations getting started with GraphOS.
@@ -67,7 +67,7 @@ Recommended for all organizations getting started with GraphOS.
 
 A supergraph consisting of:
 
-- A router hosted in your infrastructure
+- A GraphOS Router hosted in your infrastructure
 - One or more subgraphs hosted in your infrastructure
 
 Recommended for enterprise organizations that require full customization of their router, usually for advanced performance or data compliance reasons.
@@ -109,8 +109,8 @@ Cloud supergraphs are recommended for every organization that's getting started 
 ```mermaid
 flowchart LR;
   clients(Clients);
-  subgraph "GraphOS";
-  router(["Router"]);
+  subgraph "GraphOS Cloud";
+  router(["GraphOS Router"]);
   end;
   subgraph "Your infrastructure";
   api["Your GraphQL<br/>server"];
@@ -133,8 +133,8 @@ Cloud supergraphs use an architecture called [Apollo Federation](/federation/). 
 ```mermaid
 flowchart LR;
   clients(Clients);
-  subgraph "GraphOS";
-  router(["Router"]);
+  subgraph "GraphOS Cloud";
+  router(["GraphOS Router"]);
   end;
   subgraph "Your infrastructure";
   products[Products subgraph];
@@ -172,7 +172,7 @@ With a self-hosted supergraph, GraphOS does not provision a router for your supe
 flowchart LR;
   clients(Clients);
   subgraph "Your infrastructure"
-  router(["Router"]);
+  router(["GraphOS Router"]);
   serviceA[Products subgraph];
   serviceB[Reviews subgraph];
   router --- serviceA & serviceB;
@@ -180,8 +180,6 @@ flowchart LR;
   clients -.- router;
   class clients secondary;
 ```
-
-Your self-hosted router is an instance of [the Apollo Router](/router/) (cloud supergraphs use the Apollo Router under the hood).
 
 Self-hosted supergraphs provide full control over your router, but they also require handling its deployment and management. Before you adopt this graph type, make sure you have the necessary team structure to properly manage an additional service in your infrastructure.
 
