--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -9,7 +9,7 @@ Your supergraph consists of multiple components that are each versioned independ
 ```mermaid
 flowchart LR;
   subgraph "GraphOS";
-  router(["Router"]);
+  router(["GraphOS Router"]);
   pipeline[["🛠<br/>Build<br/>pipeline"]];
   end;
   subgraph "Your infrastructure";
@@ -19,13 +19,13 @@ flowchart LR;
   end;
 ```
 
-- The **router** is powered by a particular version of the [Apollo Router](/router/).
+- The **GraphOS Router** is based on a version of the Apollo Router Core.
   - This is true for all supergraph types ([cloud](./#cloud-supergraphs) and [self-hosted](./#self-hosted-supergraphs)).
 - The **GraphOS build pipeline** uses a particular version of Apollo Federation to compose your router's supergraph schema.
-  - If you use the [Rover CLI](/rover/) to compose your supergraph schema, this is true for Rover as well. In this case, you effectively maintain your own build pipeline.
+  - If you use the Rover CLI to compose your supergraph schema, this is true for Rover as well. In this case, you effectively maintain your own build pipeline.
 - Your **subgraph schemas** might each use special directives that were first introduced in a particular version of Apollo Federation.
 
-These components each target support for a particular version of [Apollo Federation](/federation/), the architecture that underpins every supergraph. Because of this, it's important to make sure these various Federation versions remain compatible with each other as you make updates to individual components.
+These components each target support for a particular version of Apollo Federation, the architecture that underpins every supergraph. Because of this, it's important to make sure these various Federation versions remain compatible with each other as you make updates to individual components.
 
 ## Recommended update order
 
@@ -50,11 +50,11 @@ graph LR;
 
 The method you use to update your router depends on which type of supergraph you have:
 
-- If you have a [self-hosted supergraph](./#self-hosted-supergraphs), you [download the latest Apollo Router binary](/router/quickstart#1-download-and-extract-the-apollo-router-binary) in every environment where your router runs.
+- If you have a [self-hosted supergraph](./#self-hosted-supergraphs), you [download the latest Apollo Router Core binary](/router/quickstart#1-download-and-extract-the-apollo-router-binary) in every environment where your router runs.
 
 - If you have a [cloud supergraph](./#cloud-supergraphs), GraphOS automatically updates your router to the latest supported version whenever that version changes.
 
-  - You can see which Apollo Router version you're running from the **Cloud Router** section of your variant's Settings page in [Studio](https://studio.apollographql.com/?referrer=docs-content):
+  - You can see which router version you're running from the **Cloud Router** section of your variant's Settings page in [Studio](https://studio.apollographql.com/?referrer=docs-content):
 
   <img
     src="../../img/router-status.jpg"
@@ -63,7 +63,7 @@ The method you use to update your router depends on which type of supergraph you
     alt="Router status for cloud supergraph"
   />
 
-For details on each Apollo Router version's corresponding Apollo Federation version, see [this article](/router/federation-version-support#support-table).
+For details on each router version's corresponding Apollo Federation version, see [this article](/router/federation-version-support#support-table).
 
 ## 2. Update your build pipeline
 
@@ -88,7 +88,7 @@ Successful build completion triggers a launch that delivers an updated schema to
 
 ### Composing with the Rover CLI
 
-If you host your own Apollo Router instance, you can use the [Rover CLI](/rover/) to compose its supergraph schema via [the `rover supergraph compose` command](/rover/commands/supergraphs#composing-a-supergraph-schema).
+If you host your own GraphOS Router instance, you can use the [Rover CLI](/rover/) to compose its supergraph schema via [the `rover supergraph compose` command](/rover/commands/supergraphs#composing-a-supergraph-schema).
 
 <Note>
 
@@ -153,7 +153,7 @@ Because you've already updated your [router](#1-update-your-router) and [build p
 
 GraphOS supergraphs use the [Apollo Federation 2](/federation/) architecture. Federation 2 is itself a versioned technology (2.2, 2.3, etc.), and each version introduces changes and additions to the set of supported [subgraph directives](/federation/federated-types/federated-directives/).
 
-- Each version of the Apollo Router is compiled against a particular version of Federation 2 (for details, [see this table](/router/federation-version-support)). Any given router version is backward compatible with previous versions of Federation. However, it isn't compatible with newer versions.
+- Each version of the GraphOS Router is compiled against a particular version of Federation 2 (for details, [see this table](/router/federation-version-support)). Any given router version is backward compatible with previous versions of Federation. However, it isn't compatible with newer versions.
 
   Therefore, it's important to update your router first, before any other supergraph component begins using a later Federation 2 version. Otherwise, you might cause your router to break by providing it a supergraph schema that it doesn't support.
 
