--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -74,8 +74,8 @@ Test out these features for free with an [Enterprise trial](./org/plans/#enterpr
 Additional GraphOS features are available to organizations on an Enterprise plan:
 
 - [Connect your self-hosted router to GraphOS](./quickstart/self-hosted/)
-  - Apollo Router is available as a free and source-available runtime for Apollo Federation. Connecting your self-hosted router to GraphOS requires an Enterprise plan.
-  - Deploy GraphOS-managed routers inside your own infrastructure, enabling you to maximize performance and fully customize their behavior. Self-hosted routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
+  - The Apollo Router Core is available as a free and source-available runtime for Apollo Federation. Connecting your self-hosted router to GraphOS requires an Enterprise plan. Once you connect the Apollo Router Core to GraphOS, it is called GraphOS Router. 
+  - Deploy GraphOS Routers inside your own infrastructure, enabling you to maximize performance and fully customize their behavior. Self-hosted routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
   - Enable [advanced features](/router/enterprise-features/) for your router fleet, such as operation limits and Redis-backed distributed caching.
 - Supergraph filtering with [contracts](./delivery/contracts/)
   - Deploy multiple instances of your router that each use a different filtered subset of your supergraph's schema. Different clients can then communicate with different routers, limiting them to whichever parts of your supergraph they should have access to.
