--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -76,7 +76,7 @@ Argument values provided as GraphQL variable names are preserved.
 
 <Note>
 
-Organizations using the Apollo Router can enable enhanced operation signature generation.
+Organizations using the GraphOS Router can enable enhanced operation signature generation.
 Enhanced operation signatures include the input object shapes, while still redacting actual values.
 See the [router configuration page](/router/configuration/overview#enhanced-operation-signature-normalization) to learn more.
 
@@ -116,7 +116,7 @@ All field aliases are removed. If an operation includes three instances of the s
 
 <Note>
 
-Organizations using the Apollo Router can enable enhanced operation signature generation that does not remove field aliases.
+Organizations using the GraphOS Router can enable enhanced operation signature generation that does not remove field aliases.
 See the [router configuration page](/router/configuration/overview#enhanced-operation-signature-normalization) to learn more.
 
 </Note>
@@ -174,9 +174,9 @@ However, you should not rely on this. Ideally, your sensitive data should never 
 
 ## Logging signatures at runtime
 
-### Apollo Router
+### GraphOS Router
 
-Since Apollo Router [v1.43.1](https://github.com/apollographql/router/releases/tag/v1.43.1), the router adds operation signatures to request contexts at the `apollo_operation_signature` key. You can also use the router's native logging features to log context values as [trace attributes](/router/configuration/telemetry/instrumentation/selectors) or you can read the context via [Rhai scripts](/router/customizations/rhai#manipulating-headers-and-the-request-context) or [coprocessors](/router/customizations/coprocessor).
+Since Apollo Router Core [v1.43.1](https://github.com/apollographql/router/releases/tag/v1.43.1), the router adds operation signatures to request contexts at the `apollo_operation_signature` key. You can also use the router's native logging features to log context values as [trace attributes](/router/configuration/telemetry/instrumentation/selectors) or you can read the context via [Rhai scripts](/router/customizations/rhai#manipulating-headers-and-the-request-context) or [coprocessors](/router/customizations/coprocessor). 
 
 With router [v1.49.0](https://github.com/apollographql/router/releases/tag/v1.49.0) and later, you can enable enhanced operation signature generation that includes include input object types and field aliases.
 See the [router configuration page](/router/configuration/overview#enhanced-operation-signature-normalization) to learn more.
