--- a/src/content/shared/graphos-router-features.mdx
+++ b/src/content/shared/graphos-router-features.mdx
@@ -1,4 +1,4 @@
-[The Apollo Router](https://www.apollographql.com/docs/router/) supports a collection of premium features specific to GraphOS. These include:
+The GraphOS Router supports a collection of premium features specific to GraphOS. These include:
 
 - Real-time updates via [GraphQL subscriptions](https://www.apollographql.com/docs/router/executing-operations/subscription-support/)
 - Improved performance with [query batching](https://www.apollographql.com/docs/router/executing-operations/query-batching)
