--- a/src/content/shared/pq-intro.mdx
+++ b/src/content/shared/pq-intro.mdx
@@ -1,4 +1,4 @@
-With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a _persisted query list_ (PQL) for your supergraph's self-hosted router. To create and update the PQL, first-party apps register trusted operations to the PQL at build time.
+With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a _persisted query list_ (PQL) for your GraphOS Router. To create and update the PQL, first-party apps register trusted operations to the PQL at build time.
 
 ```mermaid
 flowchart LR
@@ -20,7 +20,7 @@ Clients can register any kind of operation to a PQL, including queries, mutation
 
 </Note>
 
-At runtime, the [Apollo Router](/router/) checks incoming requests against the PQL, which can act as operation safelist, depending on your [router configuration](#2-router-configuration).
+At runtime, the router checks incoming requests against the PQL, which can act as operation safelist, depending on your [router configuration](#2-router-configuration).
 
 ```mermaid
 flowchart LR
@@ -33,7 +33,7 @@ subgraph Apps["First-party apps"]
 end
 bad("Bad actor")
 subgraph Supergraph["Supergraph"]
-subgraph Router["Apollo Router"]
+subgraph Router["GraphOS Router"]
 direction TB
 router(["Graph<br/>Router"]);
 pql[[Persisted<br/>Query List]];
